# tennis-intelligence-platform

./: .env.example  .gitignore  BALL_DETECTION_EXPERIMENTS_REPORT.md  LICENSE  PROGRESS.md  README.md  RESEARCH_REPORT.md  STRESS_TEST_2_REPORT.md  STRESS_TEST_4_REPORT.md  VERIFICATION.md
llm_agent/: pyproject.toml
llm_agent/tests/: manual_eval.py  test_agent.py
rag_engine/: .env.example  .gitignore  README.md  pyproject.toml
rag_engine/data/: point_documents_batch.json
rag_engine/scripts/: add_point_documents_batch.py  embed_point_documents_from_disk.py  generate_point_documents_to_disk.py  precision_at_k_eval.py
rag_engine/tests/: test_generate.py  test_ingest.py  test_vector_store.py
tennis-intelligence-platform/: .gitignore  README.md  check_deciding_set_balance.py  check_matchpoint_spread.py  check_server_sequence.py  diagnose_early_match_volatility.py  diagnose_early_match_volatility_v2.py  diagnose_early_match_volatility_v3.py  diagnose_markov_inputs_at_scale.py  diagnose_ml_informed_markov.py  diagnose_point1_jump.py  diagnose_prematch_ml.py  inspect_2008_wimbledon_state.py  inspect_iw_anomaly.py  inspect_markov_inputs.py  inspect_ml_prematch_features.py  inspect_raw_predictions.py  isolate_second_serve_flag.py  list_mcp_columns.py  pyproject.toml  trace_markov_at_matchpoint.py  verify_decay_manually.py
tennis-intelligence-platform/api/: main.py
tennis-intelligence-platform/audit_reports/: 00_repo_map.md  01_code_review.md  02_architecture_review.md  03_ml_algorithm_review.md  04_data_leakage_review.md  05_pipeline_sanity_checks.md  06_consolidated_summary.md
tennis-intelligence-platform/data/: README.md
tennis-intelligence-platform/docs/: blueprint.md  critical_issue_gm_attribution_mismatch.md  day11_head_to_head_v2_freeze.md  day5_features_freeze.md  day6_results_freeze.md  day7_point_parsing_freeze.md  day8_markov_freeze.md  day9_results_freeze.md  elo_v1_freeze.md  join_pipeline_v1_freeze.md  known_issue_after_point_swing_includes_next_point_context.md  known_issue_ml_informed_markov_pre_point_state.md  milestone5_baseline_results.md  player_registry_v1_freeze.md  ptwinner_convention_correction.md
tennis-intelligence-platform/notebooks/: 01_eda.py
tennis-intelligence-platform/pipelines/: analyze_n0_fix_impact.py  audit_feature_leakage_sweep.py  audit_markov_call_sites.py  build_day5_features.py  build_day6_features.py  build_day9_point_model.py  build_elo.py  build_joined_dataset.py  build_player_registry.py  build_xgboost_prematch_model.py  check_bp_feature_correlation.py  check_deciding_set_importance.py  check_game_counter_consistency_at_scale.py  check_loser_second_serve_sparsity.py  check_mc_simulation_count_tradeoff.py  check_ptwinner_disagreement_at_scale.py  check_ptwinner_vs_points_progression.py  check_second_serve_correlation.py  diagnose_accumulation_divergence.py  diagnose_blend_deviation_sinner_alcaraz.py  diagnose_day10_runtime.py  diagnose_deciding_set_gap.py  diagnose_double_update_bug.py  diagnose_feature_importance.py  diagnose_frozen_join_schema.py  diagnose_join_issues.py  diagnose_markov_by_score_state.py  diagnose_missing_surface_second_serve.py  diagnose_point_timeline_winner_bug.py  diagnose_points_remaining.py  diagnose_pt1_pt2_reversal.py  diagnose_recursion_call_arguments.py  diagnose_smoothed_vs_others_divergence.py  dump_raw_columns_for_range.py  evaluate_all_engines_unified.py  evaluate_early_deficit_calibration.py  evaluate_early_match_calibration.py  evaluate_full_match_calibration.py  evaluate_hybrid_engine.py  evaluate_live_engines.py  (+22 more)
v2_serving/: pyproject.toml
v2_serving/tests/: conftest.py  test_jobs.py  (+4 more)
(+298 files in other folders)
