[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tennis-intelligence-platform"
version = "0.1.0"
description = "Live tennis win-probability engine, simulation, and analytics platform."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "shap>=0.45",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "mlflow>=2.10",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "isort>=5.13",
    "pre-commit>=3.6",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"