[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "v2-serving"
version = "0.1.0"
description = "Phase 4: FastAPI orchestration layer wiring together rag_engine, llm_agent, cv_pipeline, and v1's win-probability engine behind one API."
requires-python = ">=3.11"

dependencies = [
    # rag-engine and llm-agent are not on PyPI -- installed editable side-by-side
    # into the same venv, same pattern llm_agent already uses for depending on
    # rag_engine. Not declared here since pip can't resolve a local sibling path
    # as a normal dependency string.
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
